tests/snapshots/run_wpt_conformance__trtx_pow__square__float16_5D_base_tensor_and_broadcastable_0D_integer_exponent_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow (square) float16 5D base tensor and broadcastable 0D integer exponent scalar",
    "trtx",
    "PASS",
)
